# bulkrename

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
