[package]
name = "bulkrename"
version = "0.1.1"
description = "bulkrename is a tool for renaming large numbers of files."
readme = "README.md"
homepage = "https://github.com/Soft/bulkrename"
repository = "https://github.com/Soft/bulkrename"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
tempfile = "3.1.0"
thiserror = "1.0.20"
libc = "0.2.77"
